@@ -19,6 +19,7 @@ package org.springframework.boot.autoconfigure.condition;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.boot.autoconfigure.condition.ConditionMessage.Style;
 import org.springframework.context.annotation.Condition;
@@ -51,7 +52,7 @@ class OnPropertyCondition extends SpringBootCondition {
 			.stream(ConditionalOnProperty.class.getName())
 			.filter(MergedAnnotationPredicates.unique(MergedAnnotation::getMetaTypes))
 			.map(MergedAnnotation::asAnnotationAttributes)
-			.toList();
+			.collect(Collectors.toList());
 		List<ConditionMessage> noMatch = new ArrayList<>();
 		List<ConditionMessage> match = new ArrayList<>();
 		for (AnnotationAttributes annotationAttributes : allAnnotationAttributes) {
